--- a/app/LandmarkCIty/app/src/main/res/values/strings.xml
+++ b/app/LandmarkCIty/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Landmark CIty</string>
+    <string name="app_name">Landmark City</string>
     <string name="hint_user_name">Mobile/Email</string>
     <string name="forgotPassword">Forgot Password?</string>
     <string name="registerText">Don\'t have account? Register now</string>
@@ -17,4 +17,5 @@
     <string name="error_first_name">name can not be empty</string>
     <string name="network_error">network error</string>
     <string name="loginText">Sign in</string>
+    <string name="search_hint">Search here...</string>
 </resources>
