--- a/app/LandmarkCIty/app/src/main/res/values/strings.xml
+++ b/app/LandmarkCIty/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Landmark City</string>
-    <string name="hint_user_name">Mobile/Email</string>
+    <string name="hint_user_name">Email Id</string>
     <string name="forgotPassword">Forgot Password?</string>
-    <string name="registerText">Don\'t have account? Register now</string>
+    <string name="registerText">Don\'t have account?</string>
     <string name="hintPassword">Password</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -18,4 +18,10 @@
     <string name="network_error">network error</string>
     <string name="loginText">Sign in</string>
     <string name="search_hint">Search here...</string>
+    <string name="register_now_text">Register now</string>
+    <string name="verify_text">Verify</string>
+    <string name="resend_text">Resend</string>
+    <string name="star_">*</string>
+    <string name="otp_error">Please Enter OTP</string>
+    <string name="greetings_title_text">Greetings</string>
 </resources>
